; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/split_common/extr_split_util.c_keyboard_split_setup.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/split_common/extr_split_util.c_keyboard_split_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isLeftHand = common dso_local global i64 0, align 8
@RGBLED_SPLIT = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @keyboard_split_setup() #0 {
  %1 = call i64 (...) @is_keyboard_left()
  store i64 %1, i64* @isLeftHand, align 8
  %2 = call i64 (...) @is_keyboard_master()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 (...) @keyboard_master_setup()
  br label %8

6:                                                ; preds = %0
  %7 = call i32 (...) @keyboard_slave_setup()
  br label %8

8:                                                ; preds = %6, %4
  ret void
}

declare dso_local i64 @is_keyboard_left(...) #1

declare dso_local i64 @is_keyboard_master(...) #1

declare dso_local i32 @keyboard_master_setup(...) #1

declare dso_local i32 @keyboard_slave_setup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
